--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "clean": "rimraf node_modules/.vite"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
@@ -32,6 +33,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "postcss": "^8.4.45",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.11",
     "vite": "^5.4.1"
   }
